--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
     ],
     "require": {
         "php": "^8.2",
+        "bradietilley/bcmath-number": "^0.0.4",
         "brick/math": "^0.9.3 || ^0.10 || ^0.11",
+        "illuminate/macroable": "^10.0 || ^11.0",
         "nuwave/lighthouse": "^6.36",
         "webonyx/graphql-php": "^15.2.1"
     },
